style.css
:root
{
    --colour-page: rgb(50, 50, 65);
    --colour-element-container: rgb(20, 20, 30);
    --colour-element: #cecece;
    --colour-compared: #cf7622;
    --colour-swapped: #cc241f;
    --colour-sorted: #36bd1b;
    --colour-sortindex: #0f5099;
    --colour-merged: #5226a3;
}

html
{ 
    height: 100%; 
}

*
{
    margin: 0;
    padding: 0;
}

body
{
    /* background-color: darkgrey; */
    background-color: var(--colour-page);
    min-height: 100%;
    position: relative;
}

#elements
{
    width: 80%;
    height: 50vh;

    /* Centre horizontally. */
    margin: auto;
    
    margin-bottom: 3vh;

    /* Add space between edge of the container and its elements. */
    padding: 25px;

    background-color: var(--colour-element-container);

    /* Curve the corners. */
    border-radius: 15px;
}

#primaryControls
{
    width: fit-content;
    height: fit-content;

    /* Centre horizontally. */
    margin: auto;

    margin-top: 3vh;
    margin-bottom: 3vh;

    /* Add space between edge of the container and its elements. */
    padding: 20px;

    background-color: var(--colour-element-container);

    /* Curve the corners. */
    border-radius: 15px;
}

#secondaryControls
{
    width: fit-content;
    height: fit-content;

    /* Centre horizontally. */
    margin: auto;

    margin-bottom: 3vh;

    /* Add space between edge of the container and its elements. */
    padding: 20px;

    background-color: var(--colour-element-container);

    /* Curve the corners. */
    border-radius: 15px;
}

#stats
{
    width: fit-content;
    height: fit-content;

    /* Centre horizontally. */
    margin: auto;

    margin-bottom: 3vh;

    /* Add space between edge of the container and its elements. */
    padding: 20px;

    background-color: var(--colour-element-container);

    /* Curve the corners. */
    border-radius: 15px;
}

/*
* Problem: the position of the elements is determined by the height of the heighest element (same as the Java one).
           This means that if the highest element is removed, all elements shift upward. For some sorting algorithms 
           this behaviour will cause significant graphical disturbance.
*/
.element
{
    background-color: var(--colour-element);

    position: absolute;
    bottom: 0;

    /* border-radius: 3px; */
}

.elementWrapper
{
    position: relative;
    float: left;

    height: 100%;
}

#btnSort
{
    width: 75pt;
}

#btnStep
{
    width: 75pt;
}

#btnShuffle
{
    width: 100pt;
}

.uiTextElement
{
    color: var(--colour-element);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 19pt;

    text-align: center;
}

.uiTextContainer
{
    height: 40pt;

    background-color: var(--colour-page);

    border-style: none;
    border-radius: 5pt;

    margin-right: 20px;
}

label.uiTextElement
{
    display: inline-block;
    vertical-align: top;

    padding: 0 20pt 0 20pt;
}

#cmbSorters
{
    font-size: 17pt;

    padding: 0 5pt 0 20pt;

    text-align: center;

    margin-right: 0px;
}

#rngElements
{
    width: 400px;
}

div.uiTextContainer
{
    width: 250pt;
}

div.uiTextContainer > p
{
    float: left;
}

div.uiTextContainer > span
{
    font-weight: bold;
}

div.stat
{
    display: inline-block;
}

#secondaryControls label:last-child
{
    margin-right: 0;
}

#stats div:last-child
{
    margin-right: 0;
}

